2007-07-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readPDF): Removed manual checks for pdftotext and
	pdfinfo. The system call gives a warning anyway.

2007-07-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (asPlain): Conversion from
	StructuredTextDocuments to PlainTextDocuments.

2007-07-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R: Added convenience methods ("[", nrow, ncol)
	for accessing term-document matrices.

	* inst/doc/tm.Rnw: readPDF is only called if pdftotext and pdfinfo
	are installed.

2007-07-17  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (TermDocMatrix): Improved efficiency. Kudos to
	Christian Buchta.

2007-07-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Update vignette (readPDF, readHTML, preprocessReut21578XML).

2007-07-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readHTML): Added very simple HTML reader to obtain StructuredTextDocuments.

	* R/reader.R (readPDF): Added PDF reader.

2007-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* DESCRIPTION: Moved proxy from Depends to Imports to avoid name clashes.

	* inst/stopwords/english.dat: Added the term "yes" to stopwords.

	* R/termdocmatrix.R (dim): dim function for TermDocMatrix.

	* R/preprocess.R (convertMboxEml): Accepts gzipped mboxes.

2007-07-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/distmeasure.R (dissimilarity): Replaced dists call from
	package cba by new dist call from package proxy.

2007-07-10  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Described removeSparseTerms and Dictionary.

2007-06-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R: require() uses the quietly option to suppress
	loading messages.

2007-06-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/dictionary.R: Added dictionary support.

2007-06-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R: Added classes for Reuters21578 XML and RCV1