@@ -1,3 +1,7 @@
+2007-08-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/fungen.R: Use S4 class for function generators instead of S3 attributes.
+
 2007-07-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/reader.R (readPDF): Removed manual checks for pdftotext and
